[package]
name = "icybered"
version = "0.1.0"
authors = ["Icy <57303078+icyBeRed@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = { git = 'https://github.com/buttplugio/buttplug-rs' }
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0.102"
bytes = "0.4.12"
async-std = "0.99.11"
futures-channel-preview = "=0.3.0-alpha.19"
futures-preview = {version="0.3.0-alpha.19", features = ["async-await"]}
